reorganise directorie hierarchie again

--- a/ocra_tool/Makefile
+++ b/ocra_tool/Makefile
@@ -1,6 +1,7 @@
-SRCDIR=		${.CURDIR}/..
-.PATH:		${SRCDIR}
+SRCDIR=		${.CURDIR}/../common
+.PATH:		${.CURDIR} ${SRCDIR}
 
+CFLAGS+=	-I${.CURDIR}/../common
 PROG=		ocra_tool
 SRCS=		ocra_tool.c rfc6287.c
 LDADD=		-lcrypto
