add manual and  fake_prompt support to pam module

--- a/pam_ocra/Makefile
+++ b/pam_ocra/Makefile
@@ -6,6 +6,7 @@ SHLIB=		pam_ocra
 SHLIB_NAME=	${SHLIB}.so.${SHLIB_MAJOR}
 SHLIB_MAJOR=	0
 SRCS=		pam_ocra.c ocra.c rfc6287.c
+MAN=		pam_ocra.8
 LIBDIR=		${PREFIX}/lib
 
 LDADD=		-lcrypto
