set MANPATH in pam_ocra and ocra_tool Makefile

--- a/ocra_tool/Makefile
+++ b/ocra_tool/Makefile
@@ -7,5 +7,6 @@ SRCS=		ocra_tool.c rfc6287.c
 LDADD=		-lcrypto
 MAN=		${PROG}.8
 BINDIR=		${PREFIX}/sbin
+MANDIR=		${PREFIX}/man/man
 WARNS=		6
 .include <bsd.prog.mk>
