improve top level and rfc6287_test Makefile
in rfc6287_test/Makefile,
replace 'MK_MAN=no' with 'MAN=' since MK_MAN can't be set by a user.

in Makefile,
rename TEST flag to RFC6287_TEST to avoid clashes

--- a/rfc6287_test/Makefile
+++ b/rfc6287_test/Makefile
@@ -5,9 +5,9 @@ CFLAGS+=	-I${.CURDIR}/../common
 PROG=		rfc6287_test
 SRCS=		rfc6287_test.c rfc6287.c
 LDADD=		-lcrypto
-MK_MAN=		no
 BINDIR=		${PREFIX}/bin
 WARNS=		6
+MAN=
 
 install:
 
