--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Priority: optional
 Maintainer: Stefan Grundmann <sg2342@googlemail.com>
 Build-Depends: 	debhelper (>= 9),
  		libpam0g-dev,
-               	libdb-dev,
+               	libdb5.3-dev,
 	       	libssl-dev
 Standards-Version: 3.9.8
 Section: admin
@@ -14,8 +14,8 @@ Vcs-Browser: https://github.com/sg2342/pam_ocra.git
 Package: libpam-ocra
 Architecture: any
 Depends: libpam-runtime,
-	 libdb,
-	 libssl,
+	 libdb5.3,
+	 libssl1.1,
 	 ${shlibs:Depends}, ${misc:Depends}
 Description: Pluggable Authentication Module for RFC6287 OCRA
  This is pam_ocra, a pluggable authentication module that can be used with
